--- a/scss/_sphinx_layout.scss
+++ b/scss/_sphinx_layout.scss
@@ -68,9 +68,6 @@ body {
   }
 
   .main-content {
-    ul.simple {
-      padding-bottom: rem(20px);
-    }
     .note, .warning {
       &:nth-child(1) {
         margin-top: 0;
